tests/sksl/errors/ReservedNameStatic.glsl
### Compilation failed:

error: 1: 'static' is a reserved word
1 error
